--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 	font-size: 120px;
 	font-weight: bold;
 	box-shadow: 0 0 10px 10px white;
-	color: rgba(0, 255, 238, 0.5);
+	color: BLACK;
 }
 
 .copyright {
@@ -33,8 +33,11 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 30px;
+	font-size: 40px;
+	font-weight: bold;
+	font-style: italic;
 	background-color: rgba(0, 0, 0, 0.5);
+	box-shadow: 0 0 10px 10px white;
 }
 
 .game-area {
@@ -55,33 +58,33 @@ body {
 .player-2 {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-template-rows: 5fr 1fr;
+	grid-template-rows: 4fr 2fr;
 }
 
 .player-1 > img,
 .player-2 > img {
-	height: 75%;
-	grid-row: 1/2;
+	height: 85%;
 	grid-column: 2/4;
-	align-self: center;
+	align-self: self-end;
 	justify-self: center;
 }
 
-.first-human,
-.player-2 > button {
+.first-contender,
+.second-contender {
 	justify-self: center;
 	align-self: center;
 	font-size: 7vh;
 	text-align: center;
 	width: 10vw;
-	color: white;
+	color: black;
 	line-height: 8vh;
 	vertical-align: middle;
+	grid-area: 2/2/3/4;
+	font-weight: bold;
 }
 
-.player-2 > button {
-	transition: 0.1s;
-	color: black;
+.first-contender {
+	color: darkblue;
 }
 
 .versus {
@@ -90,22 +93,6 @@ body {
 	align-self: center;
 	justify-self: center;
 	color: black;
-}
-
-.first-human {
-	grid-area: 2/2/3/4;
-}
-
-.player-2 > button:hover {
-	scale: 1.05;
-	background-color: yellow;
-	border: 0.1em solid black;
-}
-
-.selected-button {
-	background-color: yellow;
-	border: 0.1em solid red;
-	color: red;
 }
 
 .start {
@@ -138,30 +125,78 @@ body {
 	align-self: center;
 }
 
-.second-human {
-	grid-area: 2/2/3/3;
-}
-
-.computer {
-	grid-area: 2/3/3/4;
-	justify-self: center;
-	align-self: center;
-}
-
 .remove-display {
 	display: none;
 }
 
 .game-area-started {
 	display: grid;
-	grid-template-columns: 1.3fr 2fr 1.3fr;
+	grid-template-columns: 1.5fr 2fr 1.5fr;
 	grid-template-rows: 1fr;
+	background-color: rgba(160, 138, 160, 0.5);
 }
 
 .battle-ground {
 	grid-area: 1/2/2/3;
-	background-color: blueviolet;
 	display: grid;
-	grid-template-rows: 20% 80%;
+	grid-template-rows: 12% 75%;
 	grid-template-columns: 1fr;
+	background-color: rgba(255, 255, 255, 0.7);
+}
+
+.game-state {
+	grid-area: 1/1/2/2;
+	justify-self: center;
+	align-self: center;
+	font-size: 4vh;
+	font-weight: bold;
+}
+
+.game-board {
+	display: grid;
+	flex-wrap: wrap;
+	width: 70%;
+	height: 100%;
+	grid-area: 2/1/3/2;
+	background-color: rgba(255, 255, 255, 0.7);
+	justify-self: center;
+	align-self: center;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+	gap: 1vh;
+}
+
+.game-board-unit {
+	background-color: rgba(160, 138, 160, 0.8);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+img[src="./svg/circle.svg"] {
+	height: 60%;
+	transition: 10s;
+}
+
+img[src="./svg/plus.svg"] {
+	height: 90%;
+	rotate: 45deg;
+}
+
+.p1-win {
+	color: darkblue;
+}
+
+.draw {
+	color: red;
+}
+
+.reset-button {
+	width: 150px;
+	height: 50px;
+	background-color: orange;
+	font-size: 40px;
+	font-weight: bold;
+	align-self: center;
+	justify-self: center;
 }
